src/sections/Home.css
/* Home Section Style */
#home {
    position: relative;
    background: #1D1F24;
    overflow: hidden;
}

.hero-video {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    z-index: 1;
}

.hero-content {
    position: relative;
    z-index: 2;
    color: #1D1F24;
    /* 피그마 텍스트 색상 */
    width: 100%;
    height: 500px;
    margin: 0 auto;
}

.hero-text {
    position: absolute;
    font-family: 'Lora', serif;
    font-size: 100px;
    font-weight: 600;
    letter-spacing: -0.02em;
    line-height: 120px;
    white-space: nowrap;
    opacity: 0;
    animation: slideUp 1.2s cubic-bezier(0.25, 1, 0.5, 1) forwards;
}

@keyframes slideUp {
    0% {
        opacity: 0;
        transform: translate(-50%, 0%);
    }

    100% {
        opacity: 1;
        transform: translate(-50%, -50%);
    }
}

/* 개별 텍스트 위치 및 애니메이션 지연 시간 */
.text-uiux {
    top: 50%;
    left: 32%;
    animation-delay: 2.7s;
}

.text-designer {
    top: 50%;
    left: 63%;
    animation-delay: 2.7s;
}

.text-songyi {
    top: 72%;
    left: 41%;
    font-family: 'Platypi', serif;
    font-style: italic;
    font-weight: 400;
    animation-delay: 3.0s;
}

.text-portfolio {
    top: 74%;
    left: 62%;
    animation-delay: 3.0s;
}

/* 리셋 시 (다시 올라왔을 때) 적용할 레이아웃 */
.resetted .text-uiux {
    top: 50%;
    left: 32%;
    animation-delay: 2.7s;
}

.resetted .text-designer {
    top: 50%;
    left: 63%;
    animation-delay: 2.7s;
}

.resetted .text-portfolio {
    top: 74%;
    left: 62%;
    animation-delay: 3.0s;
}

.resetted .text-songyi {
    top: 72%;
    left: 41%;
    animation-delay: 3.0s;
}



@media (max-width: 768px) {
    .hero-text {
        font-size: 40px;
    }
}

/* Transition Circle Layer */
.transition-circle {
    position: absolute;
    top: 40%;
    left: 45%;
    width: 150px;
    height: 150px;
    background-color: #1E2025;
    border-radius: 50%;
    z-index: 10;
    transform: translate(-50%, -50%) scale(0);
    pointer-events: none;
    transform-origin: center center;
}

